<resources>
    <string name="app_name">TaxiDriver</string>
    <string name="app_id">169266899925830</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sfc__collection_">SFC_Collection_Activity</string>
    <string name="title_activity_sfc__book_">SFC_Book_Activity</string>
    <string name="title_activity_sfc__infor_">SFC_Infor_Activity</string>
    <string name="title_activity_sfc__play_">SFC_Play_Activity</string>
    <string name="title_activity_sfc__loading_">SFC_Loading_Activity</string>
    <string name="title_activity_sfc__log_in_">SFC_LogIn_Activity</string>
    <string name="title_activity_taxi__register_">Taxi_Register_Activity</string>
    <string name="title_activity_taxi__info_">Taxi_Info_Activity</string>
    <string name="logosize">0.047</string>
    <string name="logosize_w">0.25</string>
    <string name="headersize">0.07</string>
    <string name="ticket">Ticket#:</string>
    <string name="distance_lower_case">Distance:</string>
    <string name="input_data_invalid">Input data invalid</string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_taxi__driver_">Taxi_Driver_Activity</string>
    <string name="title_activity_taxi__map_">Taxi_Map_Activity</string>
    <string name="title_activity_your_location">YourLocationActivity</string>
    <string name="title_activity_driver_location">DriverLocationActivity</string>
    <string name="title_activity_taxi__calling_">Taxi_Calling_Activity</string>
    <string name="title_activity_taxi__call_menu_">Taxi_CallMenu_Activity</string>
    <string name="title_activity_taxi__boarding_">Taxi_Boarding_Activity</string>
    <string name="title_activity_taxi__driver__on">Taxi_Driver_On</string>
    <string name="title_activity_taxi__driver__off">Taxi_Driver_Off</string>
    <string name="title_activity_taxi__blank_">Taxi_Blank_Activity</string>
    <string name="title_activity_taxi__reject_">Taxi_Reject_Activity</string>
    <string name="title_activity_taxi__driver__borading_">Taxi_Driver_Borading_Activity</string>
    <string name="title_activity_taxi__finish_">Taxi_Finish_Activity</string>
    <string name="title_activity_taxi__rate_">Taxi_Rate_Activity</string>
    <string name="title_activity_driver__profile">Driver_Profile</string>
    <string name="title_activity_driver__settings">Driver_Settings</string>
    <string name="title_activity_driver__statis_tic">Driver_StatisTic</string>
    <string name="title_activity_driver__history">Driver_History</string>
    <string name="youre_here">You\'re here!</string>
    <string name="taxis_here">Taxi\'s here!</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="not_internet_connection">Not internet connection</string>
    <string name="invalid_type">Invalid Type</string>
    <string name="server_error">server_error</string>
    <string name="check_infor">Check Infor</string>
	<string name="someone_logged_in_using">Someone logged in using this account.</string>
	<string name="this_application_is_for">This application is for Driver only.</string>
	<string name="you_need_to_go_to">You need to go to Taxi website to get an account.</string>
	<string name="please_check_email">Please check email or password.</string>
	<string name="reset_password">Reset Password!</string>
	<string name="choose_which_email_address">Choose which email address you want to send the password to?</string>
	<string name="yes_upper_case">YES</string>
	<string name="no_upper_case">NO</string>
	<string name="check_internet_connection">Check Internet connection.</string>
	<string name="post_done">Post done.</string>
	<string name="post_cancelled">Post cancelled.</string>
	<string name="error_post">Error post.</string>
	<string name="edit_price">Edit price</string>
	<string name="enter_your_initial_fee">Enter your initial fee and price per kilometer</string>
	<string name="fields_cant_bt_empty">Fields can\'t be empty</string>
	<string name="select_option">Select Option</string>
	<string name="attention">Attention!</string>
	<string name="no_route_available">No route available for this ride.</string>
	<string name="no_results">No Results</string>
	<string name="loading">Loading</string>
	<string name="please_wait">Please wait</string>
	<string name="settings_edit_done">Done</string>
	<string name="settings_edit_cancel">Cancel</string>
    <string name="distance">DISTANCE</string>
	<string name="im_here">  I\'m Here  </string>
	<string name="reject">Reject</string>
	<string name="boarding">Boarding</string>
	<string name="passenger_pickup">Passenger Pickup</string>
	<string name="rating">RATING</string>
	<string name="response">RESPONSE</string>
	<string name="estimated">ESTIMATED</string>
	<string name="oo">00</string>
	<string name="set_empty">setEmpty</string>
	<string name="kilometer">Kilometer</string>
	<string name="initial_fee">Initial fee</string>
	<string name="comma">,</string>
	<string name="settings">Settings</string>
	<string name="language">Language</string>
	<string name="max_passengers_distance">Max Passengers Distance</string>
	<string name="current">Current</string>
	<string name="my_tariffs">My Tariffs</string>
	<string name="rate_customer">Rate Customer</string>
	<string name="ride_completed_upper_case">RIDE COMPLETED</string>
	<string name="same_customer_again">SAME CUSTOMER AGAIN?</string>
	<string name="always">Always!</string>
	<string name="good_customer">Good customer</string>
	<string name="never_again">Never again!</string>
	<string name="block_my_app_to_him_her">Block my app to him/her</string>
	<string name="add_your_note">ADD YOUR NOTE</string>
	<string name="send">Send</string>
	<string name="cancel_reasons">Cancel Reasons</string>
	<string name="please_tell_us_why_you">Please tell us why you cancelled this ride:</string>
	<string name="could_not_wait_for_the_taxi">Could not wait for the taxi</string>
	<string name="taxi_was_too_far_taking">Taxi was too far/taking too long</string>
	<string name="taxi_did_not_move_going">Taxi did not move/going wrong direction</string>
	<string name="other">Other</string>
</resources>