<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libreteam.driver.Driver_Reject"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical"
    android:background="#191617"
    >

 <LinearLayout
     android:id="@+id/header"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_header"
     android:orientation="horizontal" >
   
		<LinearLayout
		    android:id="@+id/logosection"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:paddingLeft="0dp" >

			<ImageView
			    android:id="@+id/logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/app_name"
			    android:layout_gravity="center_vertical"
			    android:background="@drawable/logo_taxi_s" />

		</LinearLayout>
      
                                       <LinearLayout 
								        android:id="@+id/border"
								        android:orientation="horizontal"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:gravity="center"
								        android:layout_gravity="center"
								        android:background="@android:color/transparent"
								        >                                   
                                                                         
										   <TextView 
										        android:id="@+id/status"
												android:layout_width="wrap_content"
												android:layout_height="fill_parent"
												android:textSize="@dimen/status"
												android:textColor="#191617"
												android:text="@string/cancel_reasons"
												android:gravity="center"
												android:layout_gravity="center"
												android:layout_marginRight="4dip"/>

									   </LinearLayout>
  		<LinearLayout
  		    android:id="@+id/thirdsection"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_gravity="top"
  		    android:gravity="right" >

  			<ImageView
  			    android:id="@+id/thirdimg"
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:layout_gravity="center_vertical|right"
  			    android:src="@drawable/thirdsection" />

  		</LinearLayout>									   
                         </LinearLayout>
   
     <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="8" 
        >
         
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1"   
      >
      
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="4"   
      />    
          
      <com.libreteam.driver.extra.FontFitTextView 
        android:id="@+id/reason"  
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:textSize="100sp"
		android:gravity="center"
		android:singleLine="true"
		android:textColor="@android:color/white"
		android:text="@string/please_tell_us_why_you"
		android:layout_weight="4"
       />     
          
      </LinearLayout>
      
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="6" 
        android:layout_margin="10dip"  
        >
      <CheckBox
            android:id="@+id/notwait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/could_not_wait_for_the_taxi" 
            />
      <CheckBox
            android:id="@+id/toolong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/taxi_was_too_far_taking" 
            />
      <CheckBox
            android:id="@+id/wrongdir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/taxi_did_not_move_going" 
            />
      <CheckBox
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/other" 
            />
     </LinearLayout>
     
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="4"  
        android:background="@android:color/transparent" 
        android:gravity="bottom"
        >
      
       <EditText 
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_note"
        android:singleLine="false"
        android:layout_marginBottom="15dip"
        android:textColor="@android:color/white"
        android:background="@drawable/apptheme_textfield_default_holo_dark"
        />   
          
     </LinearLayout>
   </LinearLayout>
    
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1" 
        >
      
      <Button 
       android:id="@+id/send"     
       android:layout_width="fill_parent"  
       android:layout_height="fill_parent" 
       android:layout_margin="7dip"
       android:background="@drawable/yellow_button"  
       android:text="@string/send"
       android:textSize="@dimen/profile_header_s"
           />             
          
      </LinearLayout> 
     
</LinearLayout>