<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libreteam.driver.Driver_Rating"
    tools:ignore="MergeRootFrame" 
    android:orientation="vertical"
    android:background="#191617">

 	<LinearLayout
 	    android:id="@+id/header"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:background="@color/background_header"
 	    android:orientation="horizontal" >

		<LinearLayout
		    android:id="@+id/logosection"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:paddingLeft="0dp" >

			<ImageView
			    android:id="@+id/logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/app_name"
			    android:layout_gravity="center_vertical"
			    android:background="@drawable/logo_taxi_s" />

		</LinearLayout>
      	<LinearLayout 
			android:id="@+id/border"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_gravity="center"
			android:background="@android:color/transparent">                                   
           	<TextView 
				android:id="@+id/status"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:textSize="@dimen/status"
				android:textColor="#191617"
				android:text="@string/rate_customer"
				android:gravity="center"
				android:layout_gravity="center"
				android:layout_marginRight="4dip"/>
		</LinearLayout>
  		<LinearLayout
  		    android:id="@+id/thirdsection"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:layout_gravity="top"
  		    android:gravity="right" >

  			<ImageView
  			    android:id="@+id/thirdimg"
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:layout_gravity="center_vertical|right"
  			    android:src="@drawable/thirdsection" />

  		</LinearLayout>		
	</LinearLayout>
	
    <LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="0dip" 
		android:layout_weight="1.5" >
		<LinearLayout 
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="0dip" 
        	android:layout_weight="2" >  
      		<LinearLayout 
		        android:orientation="vertical"
		        android:layout_width="0dip"
		        android:layout_height="fill_parent" 
		        android:layout_weight="1"
		        android:gravity="left"
		        android:layout_margin="2dip"> 
      			<ImageView 
			       android:layout_height="fill_parent"
			       android:layout_width="fill_parent"
			       android:src="@drawable/tick_ac" />
      		</LinearLayout>
      		<TextView 
				android:layout_width="0dip"
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:singleLine="true"
				android:textColor="@android:color/darker_gray"
				android:text="@string/ride_completed_upper_case"
				android:layout_weight="9"
				android:layout_margin="2dip"/> 
          
    	</LinearLayout>
    	<LinearLayout 
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="0dip" 
    		android:layout_weight="3.5">   
    		<LinearLayout 
   	 			android:orientation="vertical"
    			android:layout_width="0dip"
    			android:layout_height="fill_parent" 
    			android:layout_weight="1" 
    			android:layout_marginLeft="10dip" 
    			android:layout_marginRight="10dip"> 
				<TextView android:id="@+id/txtDate"
					android:layout_width="fill_parent"
					android:layout_height="0dip"
					android:gravity="left"
					android:singleLine="true"
					android:textColor="@android:color/darker_gray"
					android:layout_weight="1"
					android:layout_margin="0dip"/>     
    			<TextView android:id="@+id/txtDestination"
					android:layout_width="fill_parent"
					android:layout_height="0dip"
					android:gravity="left"
					android:singleLine="true"
					android:textColor="@android:color/darker_gray"
					android:layout_weight="1"
					android:layout_margin="0dip"/>    
    		</LinearLayout>
    		<LinearLayout 
			    android:orientation="vertical"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent" 
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"> 
			    <LinearLayout android:layout_width="fill_parent"
					android:layout_height="0dip"
					android:layout_weight="1"
					android:orientation="horizontal">
					<TextView
						android:layout_width="55dp"
						android:layout_height="wrap_content"
						android:textColor="@android:color/darker_gray"
						android:text="@string/ticket"/>
			        <TextView android:id="@+id/txtTicket"
						android:layout_width="45dp"
						android:layout_height="fill_parent"
						android:gravity="right"
						android:singleLine="true"
						android:textColor="@android:color/darker_gray"
						android:layout_margin="0dip"/>
			    </LinearLayout>
    			<LinearLayout android:layout_width="fill_parent"
					android:layout_height="0dip"
					android:layout_weight="1"
					android:orientation="horizontal">
					<TextView
						android:layout_width="55dp"
						android:layout_height="wrap_content"
						android:textColor="@android:color/darker_gray"
						android:text="@string/distance_lower_case"/>
			        <TextView android:id="@+id/txtDistance"
						android:layout_width="45dp"
						android:layout_height="fill_parent"
						android:gravity="right"
						android:singleLine="true"
						android:textColor="@android:color/darker_gray"
						android:layout_margin="0dip"/>
			    </LinearLayout>     
    		</LinearLayout>
  		</LinearLayout>
	</LinearLayout>
	<View
   		android:layout_width="fill_parent"
      	android:layout_height="1dp"
      	android:background="#F7C228" 
      	android:layout_margin="0dip"/> 
 	<LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="6"  
        android:background="@android:color/transparent" 
        android:gravity="bottom">
		<LinearLayout 
	  		android:orientation="vertical"
	       	android:layout_width="fill_parent"
	       	android:layout_height="0dip"     
	       	android:layout_weight="7"> 
       		<LinearLayout 
       			android:orientation="vertical"
       			android:layout_width="fill_parent"
		       	android:layout_height="0dip"     
		       	android:layout_weight="2"    >
				<TextView 
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:singleLine="true"
					android:textColor="@android:color/white"
					android:text="@string/same_customer_again"
					android:layout_margin="10dip"/>       
       		</LinearLayout>
			<LinearLayout 
	       		android:orientation="horizontal"
	       		android:layout_width="fill_parent"
	       		android:layout_height="0dip"     
	       		android:layout_weight="8">
	        	<LinearLayout 
	       			android:orientation="vertical"
			       	android:layout_width="0dip"
			       	android:layout_height="fill_parent"     
			       	android:layout_weight="1"   
			       	android:gravity="center" >
	       			<Button 
	       				android:id="@+id/positive"    
				       	android:layout_width="fill_parent"
				       	android:layout_height="0dip"     
				       	android:layout_weight="6"   
				       	android:background="@anim/rate_positive_button"  
				       	android:layout_margin="15dip" />     
	        		<TextView 
						android:layout_width="fill_parent"
						android:layout_height="0dip"
						android:gravity="center"
						android:singleLine="true"
						android:textColor="@android:color/white"
						android:text="@string/always"
						android:layout_margin="0dip"
						android:layout_weight="2" /> 
					<TextView 
						android:layout_width="fill_parent"
						android:layout_height="0dip"
						android:gravity="center"
						android:singleLine="true"
						android:textColor="@android:color/white"
						android:text="@string/good_customer"
						android:layout_margin="0dip"
						android:layout_weight="2" /> 
				</LinearLayout>     
	        	<LinearLayout 
			 		android:orientation="vertical"
			       	android:layout_width="0dip"
			       	android:layout_height="fill_parent"     
			       	android:layout_weight="1" >
	       			<Button 
						android:id="@+id/negative"    
				       	android:layout_width="fill_parent"
				       	android:layout_height="0dip"     
				       	android:layout_weight="6"   
				       	android:background="@anim/rate_negative_button"  
				       	android:layout_margin="15dip" />     
	        		<TextView 
						android:layout_width="fill_parent"
						android:layout_height="0dip"
						android:gravity="center"
						android:singleLine="true"
						android:textColor="@android:color/white"
						android:text="@string/never_again"
						android:layout_margin="0dip"
						android:layout_weight="2" /> 
					<TextView 
						android:layout_width="fill_parent"
						android:layout_height="0dip"
						android:gravity="center"
						android:singleLine="true"
						android:textColor="@android:color/white"
						android:text="@string/block_my_app_to_him_her"
						android:layout_margin="0dip"
						android:layout_weight="2"/>      
				</LinearLayout>         
			</LinearLayout>
		</LinearLayout>   
	    <LinearLayout 
			android:orientation="horizontal"
	       	android:layout_width="fill_parent"
	       	android:layout_height="0dip"     
	       	android:layout_weight="3" 
	       	android:gravity="bottom">
	       	<EditText 
		        android:id="@+id/note"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/add_your_note"
		        android:singleLine="false"
		        android:layout_marginBottom="0dip"
		        android:textColor="@android:color/white"
		        android:background="@drawable/apptheme_textfield_default_holo_dark"/>   
		</LinearLayout>   
	</LinearLayout>
	<LinearLayout 
 		android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1">
  		<Button 
      		android:id="@+id/send"     
       		android:layout_width="fill_parent"  
       		android:layout_height="fill_parent" 
       		android:layout_margin="7dip"
       		android:background="@drawable/yellow_button"  
       		android:text="@string/send"
       		android:textSize="@dimen/profile_header_s"/>             
 	</LinearLayout>  
</LinearLayout>